# neo4j-mcp

./: .gitignore  README.md  pyproject.toml
src/: config.py  neo4j_client.py  server.py
